# google-fmdn-firmware-builder

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  eid_crypto.py  main.py
firmware/: CMakeLists.txt  google52840_fmdn_v2.hex  google52840_fmdn_v2.uf2  google52840_fmdn_v2_debug.uf2  prj.conf  prj_release.conf
firmware/boards/arm/holyiot_18010/: Kconfig.board  Kconfig.defconfig  board.cmake  holyiot_18010.dts  holyiot_18010.yaml  holyiot_18010_defconfig
firmware/include/: entity_pool.example.h  entity_pool.h
firmware/src/: eid_crypto.c  eid_crypto.h  gatt_service.c  gatt_service.h  main.c
